# mini3di

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYING  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: requirements.txt  test.yml
mini3di/: __init__.py  _unkerasify.py  encoder.py  features.py  layers.py  utils.py
tests/: __init__.py  requirements.txt  test_encoder.py
