[build-system]
requires = ['setuptools >=61.0']
build-backend = "setuptools.build_meta"

[project]
name = "mini3di"
dynamic = ["version"]
description = "A NumPy port of the foldseek code for encoding structures to 3di."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "COPYING" }
authors = [
  { name = "Martin Larralde", email = "martin.larralde@embl.de" },
]
keywords = ["bioinformatics", "protein", "structure", "foldseek", "3di"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
[project.urls]
"Bug Tracker" = "https://github.com/althonos/mini3di/issues"
"Changelog" = "https://github.com/althonos/mini3di/blob/master/CHANGELOG.md"
"Coverage" = "https://codecov.io/gh/althonos/mini3di/"
"Builds" = "https://github.com/althonos/mini3di/actions"
"PyPI" = "https://pypi.org/project/mini3di"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
include = ["mini3di"]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
version = {attr = "mini3di.__version__"}

[tool.coverage.report]
include = ["mini3di/*"]
omit = ["tests/*"]
show_missing = true
exclude_lines = [
   "pragma: no cover",
   "raise NotImplementedError",
   "return NotImplemented",
   "if __name__ == .__main__.:",
   "except ImportError:",
   "if typing.TYPE_CHECKING:",
   "@abc.abstractmethod",
]

[tool.coverage.run]
branch = true
source = ["mini3di"]

[tool.pydocstyle]
inherit = false
ignore = ["D100", "D101", "D102", "D105", "D107", "D200", "D203", "D213", "D406", "D407"]
match-dir = "(?!tests)(?!resources)(?!docs)(?!build)[^\\.].*"
match = "(?!test)(?!setup)[^\\._].*\\.py"

[tool.mypy]
ignore_missing_imports = true

["tool.mypy-mini3di.*"]
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = false
warn_unused_ignores = false
warn_return_any = false